# -sensor-fuzzing-framework

./: .bandit  .coveragerc  .flake8  .gitignore  .pylintrc  CHANGELOG.md  LICENSE  OPTIMIZATION_FRAMEWORK.md  OPTIMIZATION_IMPLEMENTATION.md  OPTIMIZATION_PHASE3_COMPLETE.md  OPTIMIZATION_SUMMARY.md  QUICK_START.md  README.md  consolidated_requirements.txt  create_distribution.ps1  create_distribution.sh  github_config.ini  memory_stability_test.py  memory_test.py  optimize_launcher.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optional-ai.txt  requirements-optional-capture.txt  requirements-optional-report.txt  requirements.txt  setup_and_run.sh  setup_github.ps1  sf-longrun.cmd  sf-longrun.ps1  sf-start.cmd  sf-start.ps1  sf-status.cmd  sf-status.ps1  sf-stop.cmd  sf-stop.ps1  sil_compliance_test.py  simple_genetic_test.py  test_async_basic.py  (+4 more)
config/: config.yaml  sensor_protocol_config.yaml
deploy/: Dockerfile  README.md  docker-compose.yml  prometheus.yml
docs/: CONFIG.md  DEPLOY.md  DEV.md  DIAGRAMS.mmd  DISTRIBUTION.md  FINAL_DELIVERY.md  GITHUB_SETUP.md  PERF_REPORT_SAMPLE.md  SECURITY_REPORT_SAMPLE.md  THESIS_IMPLEMENTATION.md  USER.md  第二次提示词  需求
go/: go.mod  go.sum
sensor-fuzzing-framework-20260128/: QUICK_START.md  README.md  pyproject.toml  setup_and_run.ps1  setup_and_run.sh
tests/: conftest.py  test_ai.py  test_analysis.py  test_async_drivers.py  test_automation_pipeline.py  test_automation_report.py  test_config_loader.py  test_config_manager.py  test_data_gen.py  test_distributed.py  test_engine_drivers.py  test_envsim.py  (+7 more)
(+122 files in other folders)
