[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensor-fuzz-framework"
version = "0.1.0"
description = "Industrial sensor fuzzing framework (skeleton)."
authors = [{ name = "AI Architect" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/pylcreated/-sensor-fuzzing-framework"
Repository = "https://github.com/pylcreated/-sensor-fuzzing-framework.git"
Documentation = "https://sensor-fuzz-framework.readthedocs.io/"
Issues = "https://github.com/pylcreated/-sensor-fuzzing-framework/issues"
Changelog = "https://github.com/pylcreated/-sensor-fuzzing-framework/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["sensor_fuzz"]
